<resources>
    <string name="app_name">DishDiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_new_account">Create new Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_your_account_to_get_started">Create your account to get started</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="welcome">Welcome</string>
    <string name="gmail">Gmail</string>
    <string name="day_dishes">Day Dishes</string>
    <string name="continue_as_a_guest">Continue As A Guest</string>
    <string name="default_web_client_id">140801192945-768n6ob3icj7q13r07a6d0ab1nbshhrg.apps.googleusercontent.com</string>
    <string name="week_plan">" Week plan"</string>
    <string name="favourite_meals">" Favourite Meals"</string>
    <string name="log_out">Log out</string>
    <string name="sign_in_required">Sign In Required</string>
    <string name="provide_all_required_fields">Provide all required fields</string>
    <string name="invalid_credentials_check_email_password"><![CDATA[Invalid Credentials ,Check Email & Password!]]></string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="favourite_meals_are_empty">Favourite meals are empty</string>
    <string name="backup">Backup</string>
    <string name="recipe">Recipe</string>
</resources>