<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile_compomemts.view.ProfileFragment"

    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_Img"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_margin="30dp"

        android:src="@drawable/baseline_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"

        tools:text="Mohamed"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@id/user_Img"
        app:layout_constraintTop_toBottomOf="@id/user_Img" />


    <TextView
        android:id="@+id/favouriteMeals_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/alata"
        android:padding="5dp"

        android:text="@string/favourite_meals"

        android:textSize="24sp"
        app:drawableStartCompat="@drawable/baseline_favorite"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <TextView
        android:id="@+id/weak_Plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:padding="5dp"
        android:text="@string/week_plan"

        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/outline_calendar_view_weak"
        app:layout_constraintStart_toStartOf="@+id/favouriteMeals_id"
        app:layout_constraintTop_toBottomOf="@id/favouriteMeals_id" />


    <Button
        android:id="@+id/backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"

       android:backgroundTint="@color/txtColor"

        android:text="@string/backup"
        android:textColor="#131313"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/log_out_id"
        app:layout_constraintTop_toTopOf="@+id/log_out_id" />

    <Button
        android:id="@+id/log_out_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/txtColor"

        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:drawableLeftCompat="@drawable/baseline_logout"
        app:layout_constraintEnd_toStartOf="@+id/backup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weak_Plan" />

    <TextView
        android:id="@+id/signInRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/sign_in_required"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/txtColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

             />

    <Button
        android:id="@+id/signInRequiredBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/txtColor"
        android:fontFamily="@font/alata"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/signInRequired" />
</androidx.constraintlayout.widget.ConstraintLayout>

