<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search_compomemts.view.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_shape"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"


        />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/categoryGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/search_id"
        app:singleSelection="true">

    <com.google.android.material.chip.Chip
        android:id="@+id/country_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Chip.Filter"
       android:backgroundTint="@color/gray_open"
        android:text="@string/country"
        android:textAlignment="center"



        />

    <com.google.android.material.chip.Chip
        android:id="@+id/ingredient_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient"
        android:textAlignment="center"
        android:backgroundTint="@color/gray_open"
        style="@style/Widget.Material3.Chip.Filter"


         />

    <com.google.android.material.chip.Chip
        android:id="@+id/category_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAlignment="center"
        android:backgroundTint="@color/gray_open"
        style="@style/Widget.Material3.Chip.Filter"
         />


    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_fragment_RV"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/categoryGroup"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>