<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forgetpassword_components.ForgetPasswordFragment"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sign_up_background"
                />

            <ImageView
                android:id="@+id/reset_backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"

                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/reset_backBtn"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.8"
        android:orientation="vertical"
        android:elevation="11dp"
        app:cardBackgroundColor="@color/gray_open"

        app:cardCornerRadius="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

            <TextView
                android:id="@+id/get_started"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"

                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/forget_email_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:layout_marginTop="10dp"
               app:layout_constraintTop_toBottomOf="@id/get_started"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                tools:layout_editor_absoluteY="278dp" />


            <Button
                android:id="@+id/reset_btn"

                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textSize="16sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:backgroundTint="@color/yellow_bg_color"
                android:layout_marginBottom="2dp"
                android:background="@drawable/corner_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forget_email_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />





            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />


            <ProgressBar
                android:id="@+id/reset_ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>