<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home_compomemts.view.HomeFragment"
    android:id="@+id/home_skeleton_layout"
    >

    <TextView
        android:id="@+id/skeleton_daily_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/daily_meal"
        android:textColor="@color/yellow_dark_bg_color"
        android:textSize="@dimen/text_size_very_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidelinestart1"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_daily_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:cardElevation="11dp"
        android:src="@drawable/baseline_image"
        app:cardCornerRadius="15dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="@id/guidelinestart1"
        app:layout_constraintEnd_toEndOf="@id/guidelineend1"
        app:layout_constraintTop_toBottomOf="@id/skeleton_daily_meal"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <ImageView
                android:id="@+id/skeleton_dailyImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_image"

                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/skelton_daily_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="lsgos"
                android:textColor="@color/black"

                android:padding="5dp"
                android:background="@drawable/corner_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintStart_toStartOf="parent"

                />







        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/skelton_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/category"
        android:textColor="@color/yellow_dark_bg_color"
        android:textSize="@dimen/text_size_very_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidelinestart1"
        app:layout_constraintTop_toBottomOf="@id/card_daily_item"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skeleton_category_RV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/baseline_image"
        app:layout_constraintEnd_toEndOf="@id/guidelineend1"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="@id/guidelinestart1"
        app:layout_constraintTop_toBottomOf="@id/skelton_category" />

    <TextView
        android:id="@+id/skeleton_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/country"
        android:textColor="@color/yellow_dark_bg_color"
        android:textSize="@dimen/text_size_very_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidelinestart1"
        app:layout_constraintTop_toBottomOf="@id/skeleton_category_RV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skelton_country_RV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/baseline_image"
        app:layout_constraintEnd_toEndOf="@id/guidelineend1"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guidelinestart1"
        app:layout_constraintTop_toBottomOf="@id/skeleton_country" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinestart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineend1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="15dp" />


</androidx.constraintlayout.widget.ConstraintLayout>